# rust-prac

./: Cargo.toml  hello.txt  lorem_ipsum.txt
src/: main.rs
